--- a/DataVisualization/lol_winrate/package.json
+++ b/DataVisualization/lol_winrate/package.json
@@ -3,9 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
     "datatables.net-dt": "^2.0.8",
@@ -15,8 +12,9 @@
     "nodemon": "^3.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-router-dom": "^6.23.1",
+    "react-scripts": "^5.0.1",
+    "view-json-react": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
